links in html completed

--- a/resume.html
+++ b/resume.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
 </head>
-<body>
+<body id="idname">
     <table>
         <tr>
-            <td><img width="300" src="image/hurr profile.jpg" alt="Hurr Profile"></td>
+            <td>
+                <a href="https//:www.github.com/hurrali" target="_blank"><img width="300" src="image/hurr profile.jpg" alt="Hurr Profile"></a>
+                </td>
             <td><h1>Hurr</h1>
                 <p><i>Full Stack Software Engineer|HTML|CSS|Javascript|SEO Spcialist|Digital Marketer</i></p>
-                <p>I &#10084; Programing 🚀</p></td>
+                <p>I &#10084; Programing 🚀</p>
+            <a href="#connect ">Connect With Me</a>
+            </td>
         </tr>
     </table>
     <hr>
@@ -58,15 +62,19 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore qui quae repudiandae earum aut provident repellat, similique excepturi dolore totam ipsam obcaecati est facilis officia incidunt beatae placeat alias autem.</li>
         <li><h3>ITU website</h3>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi laudantium repellat a fuga doloribus soluta laborum dolores excepturi placeat beatae ut, sunt, facere provident sapiente at, vero totam neque ipsa.</li>
-        <li><h3>www.developifysolution.net</h3>
+        <li><h3><a href="http://www.developifysolution.net" target="_blank">www.developifysolution.net</a></h3>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique aut tempora quibusdam dolore reprehenderit, deleniti quisquam eligendi vero saepe qui sequi, vel minima, nesciunt error inventore quis eveniet ipsum beatae?</li>
     </ul>
     <hr>
 <!-- contact us section -->
-    <h2>Contact Us</h2>
-    <p>Email:abc@gmail.com</p>
+    <h2 id="connect">Contact Us</h2>
+    <p><a href="mailto:sheikhhurr12@gmail.com">Email</a></p>
+    <p>Call Now:<a href="tel:989898">9898989</a></p>
     <p>Github:https://github.com/abc</p>
     <p>Facebook Page:Example@facebook.com</p>
-    <p>Youtube:Example </p>
+    <p>Youtube:Example</p>
+    <a href="about-us.html" target="_blank"><p>About us</p></a>
+    <br><br>
+    <a href="#idname">Go to top</a>
 </body>
 </html>
