--- a/form.html
+++ b/form.html
@@ -7,6 +7,51 @@
     <title>Form</title>
 </head>
 <body>
-    <h1>Form takes input from user</h1>
+    <h1>Enter Your Details Here</h1>
+    <form action="">
+        <label for="">First Name</label>
+        <input type="text" name="firstname">
+        <label for="">Last Name</label>
+        <input type="text" name="lastname">
+        <br><br>
+        <label for="">Age</label>
+        <input type="number">
+        <br><br>
+        <label for="">Date of birth</label>
+        <input type="date">
+        <br><br>
+        <label for="email">Email</label>
+        <input id="email" type="email">
+        <br><br>
+        <label for="">Password</label>
+        <input type="password">
+        <br><br>
+        <p>Enter Your Tshirts Size</p>
+        <input id="small" name="Tshirts" type="radio" value="small">
+        <label for="small">Small</label>
+        <br>
+        <input id="medium" name="Tshirts" type="radio" value="medium">
+        <label for="medium">Medium</label>
+        <br>
+        <input id="large" name="Tshirts" type="radio" value="large">
+        <label for="large">Large</label>
+        <br><br>
+        <label for="color">Your Tshirt Color</label>
+        <input type="color" id="color">
+        <br><br>
+        <label for="car">Select a car for jorney</label>
+        <select name="car" id="car">
+            <option value="audi">Audi</option>
+            <option value="benz">Benz</option>
+            <option value="mehran">Mehran</option>
+            <option value="corolla">Corolla</option>
+        </select>
+        <br><br>
+        <label for="feedback">Gives Feedback</label>
+        <textarea name="feedback" id="feedback" cols="20" rows="10"></textarea>
+        <br><br>
+        <input type="reset">
+        <input type="submit">
+    </form>
 </body>
 </html>
