links in html completed

--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
 </head>
-<body id="idname">
+<body>
+    <header>
     <table>
         <tr>
             <td>
@@ -16,11 +17,22 @@
                 <p><i>Full Stack Software Engineer|HTML|CSS|Javascript|SEO Spcialist|Digital Marketer</i></p>
                 <p>I &#10084; Programing 🚀</p>
             <a href="#connect ">Connect With Me</a>
+            <nav>
+                <ul>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contactme">Connect With Me</a></li>
+                </ul>
+            </nav>
             </td>
         </tr>
     </table>
     <hr>
+    </header>
     <!-- header ends -->
+    <main>
+        <section id="education">
     <h2>Education</h2>
     <table border="1px">
         <tr>
@@ -42,6 +54,9 @@
             <td>A</td>
         </tr>
     </table>
+</section>
+<section id="experience">
+    <article>
     <h2>Experience</h2>
     <p>Google India office Delhi</p>
     <p><i><b>Full Stack Web Developer</b></i></p>
@@ -54,19 +69,37 @@
             <li>C++</li>
         </ul>
     </p>
+</article>
+</section>
     <!-- Projects section -->
+    <section id="projects">
     <h2>Projects</h2>
     <ul>
         <li>
+            <article>
             <h3>Automated Car Parking Services</h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore qui quae repudiandae earum aut provident repellat, similique excepturi dolore totam ipsam obcaecati est facilis officia incidunt beatae placeat alias autem.</li>
-        <li><h3>ITU website</h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi laudantium repellat a fuga doloribus soluta laborum dolores excepturi placeat beatae ut, sunt, facere provident sapiente at, vero totam neque ipsa.</li>
-        <li><h3><a href="http://www.developifysolution.net" target="_blank">www.developifysolution.net</a></h3>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique aut tempora quibusdam dolore reprehenderit, deleniti quisquam eligendi vero saepe qui sequi, vel minima, nesciunt error inventore quis eveniet ipsum beatae?</li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore qui quae repudiandae earum aut provident repellat, similique excepturi dolore totam ipsam obcaecati est facilis officia incidunt beatae placeat alias autem.
+    </article>
+</li>
+        <li>
+            <article>
+                <h3>ITU website</h3>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi laudantium repellat a fuga doloribus soluta laborum dolores excepturi placeat beatae ut, sunt, facere provident sapiente at, vero totam neque ipsa.
+    </article>
+    </li>
+        <li>
+        <article>
+            <h3><a href="https://www.developify.net/" target="_blank">Developify Solution</a></h3>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique aut tempora quibusdam dolore reprehenderit, deleniti quisquam eligendi vero saepe qui sequi, vel minima, nesciunt error inventore quis eveniet ipsum beatae?
+    </article>
+    </li>
     </ul>
     <hr>
+</section>
+</main>
+    <!-- main section ends -->
 <!-- contact us section -->
+<footer id="contactme">
     <h2 id="connect">Contact Us</h2>
     <p><a href="mailto:sheikhhurr12@gmail.com">Email</a></p>
     <p>Call Now:<a href="tel:989898">9898989</a></p>
@@ -75,6 +108,9 @@
     <p>Youtube:Example</p>
     <a href="about-us.html" target="_blank"><p>About us</p></a>
     <br><br>
-    <a href="#idname">Go to top</a>
+    <!-- by default id call to top(body) -->
+    <a href="#">Go to top</a> 
+    
+</footer>
 </body>
 </html>
