--- a/resume/index.html
+++ b/resume/index.html
@@ -13,8 +13,7 @@
             <td>
                 <a href="https//:www.github.com/hurrali" target="_blank"><img width="300" src="image/hurr profile.jpg" alt="Hurr Profile"></a>
                 </td>
-            <td>
-                <h1>Hurr</h1>
+            <td><h1>Hurr</h1>
                 <p><i>Full Stack Software Engineer|HTML|CSS|Javascript|SEO Spcialist|Digital Marketer</i></p>
                 <p>I &#10084; Programing 🚀</p>
             <a href="#connect ">Connect With Me</a>
