--- a/learncss/index.html
+++ b/learncss/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blockxhain Website</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="../image/hurr profile.jpg" type="image/x-icon">
+    <title>Demo content</title>
 </head>
 <body>
-    <h1>Here is my Dreams comes true</h1>
-    <p>Unlock the true potential of blockchain with our catting-edge technology</p>
-    <p>Hello World</p>
-    <button>Get Started</button>
+    <h1>Blue</h1>
+    <h2>Yellow</h2>
 </body>
 </html>
